# apispec

./: Cargo.toml  README.md  plan.md  prompt.txt
src/: app.rs  cli.rs  error.rs  main.rs
src/cache/: metadata.rs  store.rs
src/source/: classify.rs  discover.rs  fetch.rs  mod.rs
src/spec/: index.rs  load.rs  mod.rs  render.rs  schema_tree.rs  validate.rs
src/spec/snapshots/: schema_cycle.snap  schema_object_nested.snap  schema_property_cutoff.snap  schema_unresolved_ref.snap
src/tui/: details.rs  event.rs  keymap.rs  mod.rs  state.rs  tree.rs  view.rs
