[package]
name = "apispec"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
oas3 = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.13"
